// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.ResizeBox default 1`] = `
<div
  class="arco-resizebox"
>
  <div
    class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
  >
    <div
      class="arco-resizebox-trigger-icon-wrapper"
    >
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
      <span
        class="arco-resizebox-trigger-icon"
      >
        <svg
          class="arco-icon arco-icon-drag-dot-vertical"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
          />
        </svg>
      </span>
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.ResizeBox set className globally 1`] = `
<div
  class="arco-resizebox global-default-class"
>
  <div
    class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
  >
    <div
      class="arco-resizebox-trigger-icon-wrapper"
    >
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
      <span
        class="arco-resizebox-trigger-icon"
      >
        <svg
          class="arco-icon arco-icon-drag-dot-vertical"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
          />
        </svg>
      </span>
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.ResizeBox set className globally and component set className itself. 1`] = `
<div
  class="arco-resizebox component-class"
>
  <div
    class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
  >
    <div
      class="arco-resizebox-trigger-icon-wrapper"
    >
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
      <span
        class="arco-resizebox-trigger-icon"
      >
        <svg
          class="arco-icon arco-icon-drag-dot-vertical"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
          />
        </svg>
      </span>
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
    </div>
  </div>
</div>
`;
